# BatteryRateCap

./: .gitignore  .travis.yml  3D_Battery_Parameter_Log.xls  Data_Conversion_v1.ipynb  Democurvefit.ipynb  Fitting_visualization.ipynb  Hypothesis Testing for Correlation Coefficient.ipynb  LICENSE  LICENSE.txt  Plot_Geometry_Parameters.ipynb  README.md  Rate_Capacity_Fit.ipynb  environment.yml  fit3dliib.py  optional_dependencies.txt  plot_geo.ipynb  plot_geo.py  psuedocodecurvefit.ipynb  pyproject.toml  requirements.txt  setup.py  test_plot_geo.ipynb  test_plot_geo.py
3dLiIBattery/: fit3dliib.py
3dLiIBattery/test/: test_fit3dliib.py
BatteryRateCap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Demo/: Data_Conversion.ipynb  Data_Conversion_v1.ipynb  Demo_correlation_test.ipynb  Demo_curvefit.ipynb  Demo_data_conversion.ipynb  Demo_fitcaprate.ipynb  Demo_visualization.ipynb  Democurvefit.ipynb  Excelfile_ex.xls  Hypothesis Testing for Linear Correlation.ipynb  demo_plot_geo.ipynb
batteryratecap/: Unit_test_script.ipynb  __init__.py  correlationtest.py  data_converter.py  fitcaprate.py  liib3d.py  visualization.py
batteryratecap/data/: liibattery3d_performancelog.xls
demo/: Demo_correlation_test.ipynb  Demo_data_conversion.ipynb  Demo_fitcaprate.ipynb  Demo_visualization.ipynb
doc/: plot_geo.ipynb  test_plot_geo.ipynb
doc/paper/: paper.bib  (+1 more)
liibattery3d/: Data_converter.py  __init__.py  correlationtest.py  data_converter.py  liib3d.py  plot_geo.py  visualization.py
tests/: __init__.py  test_data_converter.py  test_fitcaprate.py  test_visualization.py
(+36 files in other folders)
