[project]
name = "BatteryRateCap"
version = "0.1.2"
description = "A Python package for battery rate capability analysis."
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
keywords = ["battery", "rate analysis", "rate capability"]
authors = [
    {name = "Chih-Hsuan Hung", email = "dhung@uw.edu"},
    {name = "Praise Anyanwu", email = "anyanc@uw.edu"},
    {name = "Kevin G. Lee", email = "gskl92@uw.edu"},
    {name = "Matthew J. Canin", email = "matthewcanin@gmail.com"},
    {name = "Kevin Martinez-Chavez", email = "martikev@protonmail.com"}
]
maintainers = [
    {name = "Chih-Hsuan Hung", email = "dhung@uw.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
[tool.setuptools]
py-modules = ["batteryratecap"]
[project.urls]
"Homepage" = "https://github.com/BatteryDesign/BatteryRateCap"
[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
